--- a/view/resource.qrc
+++ b/view/resource.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="image">
-    <file>bg.jpg</file>
     <file>timg.jpg</file>
+    <file>ivan1.jpg</file>
+    <file>bg.jpg</file>
   </qresource>
 </RCC>
